src/index.css
/*@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap');*/
@import "tailwindcss";


@font-face {
  font-family: 'AllumiStdExtendedBookBold';
  src: url('/src/assets/fonts/allumi/fonnts.com-Allumi_Std_Extended_Book_Bold.otf') format('opentype');
  font-weight: bolder;
  font-style: normal;
}

html {
  @apply transition-colors duration-300 bg-white dark:bg-gray-900 text-gray-900 dark:text-white ;
}

html.light{
  @apply transition-colors duration-300 bg-white text-gray-900 ;
}

:root {
  
  line-height: 1.5;
  font-weight: 400;
  color-scheme: light dark;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  margin: 0;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
}

h1 {
  font-size: 3.2em;
  line-height: 1.5;
}

button#btn-hero {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #213547;
  cursor: pointer;
  transition: border-color 0.25s;
}

button:hover {
  border-color: gray;
}

button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }

  a:hover {
    color: #4b7cef;
  }

}

